RESOLVED FIXED267827
Begin using C++ coroutines for WebPageProxy::decidePolicyForNavigationAction
https://bugs.webkit.org/show_bug.cgi?id=267827
Summary Begin using C++ coroutines for WebPageProxy::decidePolicyForNavigationAction
Alex Christensen
Reported 2024-01-20 18:56:42 PST
...
Attachments
Alex Christensen
Comment 1 2024-01-20 19:14:48 PST
Radar WebKit Bug Importer
Comment 2 2024-01-27 18:57:14 PST
EWS
Comment 3 2024-05-20 08:16:57 PDT
Committed 278995@main (e90f899882e4): <https://commits.webkit.org/278995@main> Reviewed commits have been landed. Closing PR #23021 and removing active labels.
Diego Pino
Comment 4 2024-05-20 23:56:40 PDT
Build bot 'GTK-Linux-64-bit-Release-Debian-11-Build' if failing after this patch with the following error: https://build.webkit.org/#/builders/992/builds/2441/steps/9/logs/stdio ``` In file included from ../../../Source/WebKit/Platform/CoroutineUtilities.h:31, from ../../../Source/WebKit/UIProcess/WebPageProxy.cpp:70, from DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-9.cpp:2: /usr/include/c++/10/coroutine:295:2: error: #error "the coroutine header requires -fcoroutines" 295 | #error "the coroutine header requires -fcoroutines" | ^~~~~ In file included from ../../../Source/WebKit/UIProcess/WebPageProxy.cpp:70, from DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-9.cpp:2: ../../../Source/WebKit/Platform/CoroutineUtilities.h:48:42: error: expected ‘)’ before ‘<’ token 48 | CoroutineHandle(std::coroutine_handle<PromiseType>&& handle) | ~ ^ | ) ```
Diego Pino
Comment 5 2024-05-21 00:00:32 PDT
EWS
Comment 6 2024-05-21 01:31:15 PDT
Committed 279046@main (3a3bb5a411b2): <https://commits.webkit.org/279046@main> Reviewed commits have been landed. Closing PR #28833 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.